# tree-sitter-wdl

./: .gitignore  CHANGES.md  Cargo.toml  README.md  binding.gyp  grammar.js  grammar_old.js  grammar_old2.js  package.json
.github/workflows/: ci.yml
benches/: parser.rs
bindings/node/: binding.cc  index.js
bindings/rust/: build.rs  lib.rs
resources/test/: comprehensive.wdl  expressions.wdl  simple.wdl  strings.wdl
src/: grammar.json  node-types.json  parser.c  scanner.cc  scanner_old.cc  scanner_old2.cc
test/corpus/: comprehensive.txt  expressions.txt  strings.txt
